Modified addon builder to exclude all markdown and po files, reducing final addon size

--- a/sconstruct
+++ b/sconstruct
@@ -95,6 +95,7 @@ def createAddonHelp(dir):
 
 def createAddonBundleFromPath(path, dest):
 	""" Creates a bundle from a directory that contains an addon manifest file."""
+	excludedFiles=[i.replace("addon/", "") for i in buildVars.excludedFiles]
 	basedir = os.path.abspath(path)
 	with zipfile.ZipFile(dest, 'w', zipfile.ZIP_DEFLATED) as z:
 		# FIXME: the include/exclude feature may or may not be useful. Also python files can be pre-compiled.
@@ -103,7 +104,7 @@ def createAddonBundleFromPath(path, dest):
 			for filename in filenames:
 				pathInBundle = os.path.join(relativePath, filename)
 				absPath = os.path.join(dir, filename)
-				if pathInBundle not in buildVars.excludedFiles: z.write(absPath, pathInBundle)
+				if pathInBundle not in excludedFiles: z.write(absPath, pathInBundle)
 	return dest
 
 def generateManifest(source, dest):
